--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,15 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+title: Jinuk Moon # the website title (if blank, full name will be used instead)
+first_name: Jinuk
+middle_name: 
+last_name: Moon
+github: JinukMoon  # GitHub 사용자 이름 추가
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  PhD Student in Machine Learning and Computational Catalysis
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  PhD Student in Machine Learning and Computational Catalysis
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -263,8 +264,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Moon]
+  first_name: [Jinuk]
 
   style: apa
   locale: en
@@ -641,3 +642,13 @@ jsonresume:
   - languages
   - interests
   - references
+
+social:
+  name: Jinuk Moon
+  email: jumoon@snu.ac.kr
+  links:
+    - https://www.linkedin.com/in/jinukmoon
+    - https://github.com/JinukMoon
+    - https://orcid.org/0009-0007-6236-0449  # ORCID ID를 실제 ID로 변경해주세요
+    - icon: ai ai-google-scholar
+      link: https://scholar.google.com/citations?user=9Ueds-EAAAAJ  # Google Scholar ID를 실제 ID로 변경해주세요
